--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>spring-boot-find-the-urls</finalName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
